--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello world</h1>
     <h2>Welcome to the party today at the office</h2>
+    <h2>Thanks see you there.</h2>
 </body>
 </html>
