--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Greetings from Furebo</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <marquee><h1>Hello world</h1></marquee>
     <h2>Welcome to the party today at the office</h2>
     <h2>Thanks see you there.</h2>
 </body>
